--- a/cadastro.css
+++ b/cadastro.css
@@ -22,11 +22,7 @@
     background-size: cover;
     background-color: red;
     display: block;
-}
-
-.fundoIMG2{
-    background-image: url(https://images.seeklogo.com/logo-png/33/2/novo-monograma-crf-2018-flamengo-logo-png_seeklogo-330996.png);
-    background-size: cover;
+    background-position-y: 90px;
 }
 
 .buttonCor{
@@ -69,6 +65,7 @@
     color: black;
     width: 100%;
     box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    background-color: red;
  
 }
 
