--- a/História.css
+++ b/História.css
@@ -18,7 +18,7 @@
 .imagemLogo {
     width: 50px;
     height: 50px;
-    background-image: url(https://images.seeklogo.com/logo-png/33/2/novo-monograma-crf-2018-flamengo-logo-png_seeklogo-330996.png);
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/10/Flamengo-rowing-2018.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -44,7 +44,7 @@
 }
 
 .fundoIMG1{
-    background-image: url(https://escolaflamengo.com.br/wp-content/uploads/2024/12/FLA-NOVO-1.png);
+    background-image: url(https://museuflamengo.com/wp-content/uploads/2024/01/escudos_flamengo_final.png);
     max-width: 100%;
     height: auto;
     background-size: cover;
