--- a/login.css
+++ b/login.css
@@ -16,7 +16,7 @@
 }
 
 .fundoIMG1{
-    background-image: url(https://escolaflamengo.com.br/wp-content/uploads/2024/12/FLA-NOVO-1.png);
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/10/Flamengo-rowing-2018.png);
     max-width: 100%;
     height: auto;
     background-size: cover;
